# poi_manager

./: CMakeLists.txt  README.md  package.xml  point.yaml  pois.yaml  test.yaml
.github/: Jenkinsfile
config/: test.yaml
launch/: poi_manager.launch  ros_pose_reader.launch  save_robot_poi.launch
msg/: LabeledPose.msg
poi_manager/: CMakeLists.txt  README.md  package.xml  setup.py
poi_manager/config/: test.yaml
poi_manager/launch/: poi_manager.launch
poi_manager/src/: manage_yaml.py
poi_manager/src/poi_manager/: poi.py  poi_manager_test.py  poi_marker.py  poi_node.py
poi_manager/srv/: UpdatePOIs.srv
poi_manager_msgs/: CMakeLists.txt  package.xml
poi_manager_msgs/msg/: LabeledPose.msg  PoiJointState.msg  PoiState.msg
poi_manager_msgs/srv/: AddPOI.srv  AddPOIJoints.srv  AddPOI_params.srv  AddPOIs.srv  DeleteEnvironment.srv  DeletePOI.srv  GetPOI.srv  GetPOI_params.srv  GetPOIs.srv  GetPoseTrigger.srv  ReadPOIs.srv  UpdatePOIName.srv  UpdatePOIs.srv
src/: fake_read_yaml.py  fake_updater.py  manage_yaml.py  read_yaml.py  save_robot_poi.py
srv/: AddPOI.srv  ReadPOIs.srv  UpdateYaml.srv
