<?xml version="1.0"?>
<package format="2">
  <name>poi_manager</name>
  <version>0.1.0</version>
  <description>The poi_manager package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal Espinola</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>robot_local_control_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>poi_manager_msgs</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>robot_local_control_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
